start the location system + compass

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">SearchANDFind</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_compass">CompassActivity</string>
+    <string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, 
+        Altitude = %3$s avec une précision de %4$s mètres </string>
+    <string name="provider_disabled">The provider %s is now disabled</string>
+    <string name="provider_enabled">The provider %s is now enabled</string>
+    
 
 </resources>
